# fatp-drone

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: fatp-drone.yml
app/: fatp-drone-wasm.html
app/console/: CMakeLists.txt  main.cpp
app/fatp-drone_gui/: fatp-drone-wasm.html  fatp-drone.html
components/DroneCore/: CMakeLists.txt
components/DroneCore/tests/: test_DroneCore.cpp
components/SubsystemManager/: CMakeLists.txt
components/SubsystemManager/tests/: test_SubsystemManager.cpp
components/TelemetryLog/: CMakeLists.txt
components/TelemetryLog/tests/: test_TelemetryLog.cpp
components/VehicleStateMachine/: CMakeLists.txt  test_VehicleStateMachine.cpp
components/VehicleStateMachine/tests/: test_VehicleStateMachine.cpp
docs/: Case Study - The Graph Is the Source of Truth.md  fatp-drone-manual.md  fatp-drone-plan.md
guidelines/: AI_Assistant_Demerits.md  Fat-P_Library_Development_Guidelines.md  FatPMetaHeaderGuidelines.md  FatP_Benchmark_Code_Style_Guide.md  FatP_CI_Workflow_Style_Guide.md  FatP_Systemic_Hygiene_Policy.md  FatP_Teaching_Documents_Style_Guide.md  FatP_Test_Suite_Style_Guide.md
include/drone/: CommandParser.h  DroneEvents.h  SubsystemManager.h  Subsystems.h  TelemetryLog.h  VehicleStateMachine.h
